--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 <html>
   <head>
+    <!-- The below line redirects the home page amolyp.github.io/ to below address -->
   <meta http-equiv='refresh' content='5; URL=https://registry.jsonresume.org/amolyp'>
 </head>
 </html>
